src/styles/global.scss
@use './partials' as *;

* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
	scrollbar-width: auto;
	scrollbar-color: #5c5c5c #2e2e2e;
}

html {
	font-size: 62.5%;
	--scroll-behavior: smooth !important;
	scroll-behavior: smooth !important;

	body {
		max-width: 100vw;
		overflow-x: hidden;
		background-color: $bg;
		color: $font-bright;

		a {
			text-decoration: none;
			color: $font-bright;
		}

		ul {
			list-style: none;
		}
	}
}

input,
textarea,
button {
	all: unset;
}

